styles.css
#time{
    margin-left: 600px;
    font-family: 'Satisfy', cursive;
    font-size: 90px;
    margin-top: 60px;
    color: white;
}

#date{
    margin-left: 620px;
    margin-top: 30px;
    font-family: 'Satisfy', cursive;
    font-size: 50px;
    color: white;
}

h1{
    font-family: 'Alfa Slab One', cursive;
    font-size: 100px;
    color: white;

}

#header{
    margin-left: 450px;
    margin-top: 100px;
    font-family: 'Amatic SC', cursive;

}

.location-timezone{
    font-size: 40px;
    margin-left: 550px;
}

.temperature-degree{
    margin-left: 670px;
    color: white;
    font-size: 30px;
    margin-top: 40px;
}

.temperature-description{
    margin-left: 670px;
    color: white;
}

#loading{
    size: 30px;
}

body{
    background-repeat: no-repeat;
    background-size: 170%  170%; 
}

